# LibraryDotProduct

./: CMakeLists.txt  DotProductConfig.cmake.in  LICENSE  README.md  main.cpp
bindings/: bindings.cpp
include/DotProduct/: DotProductCPU.h  DotProductGPU.h  dotProduct.h
scripts/: test.py
src/DotProduct/: CUDA_dotproduct.cu  DotProductCPU.cpp  DotProductGPU.cpp
